📝 docs(README.md): remove MongoDB related environment variables as they are no longer needed ➕ feat(package.json): add @types/uuid for better TypeScript support 🎨 style(AddressInput.tsx): replace inline error styling with a CSS class for better maintainability 🔥 remove(HeaderPage.tsx): remove unnecessary blank line 🔀 refactor(Transfer.tsx): reorder imports for better readability and add error display 🔀 refactor(useContractExecution.ts): reorder imports and change 'let' to 'const' for better code quality 🔀 refactor(useWriteContract.tsx): reorder imports for better readability ✨ feat(globals.css): add .error-text class for error messages 🔀 refactor(notifications.tsx): reorder imports for better readability

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,6 +126,13 @@ a {
     text-align: center;
 }
 
+.error-text {
+    color: red;
+    margin-block: 15px;
+    font-size: 12px;
+    background-color: white;
+}
+
 @media (width < 1050px) {
     .steps-pane {
         display: block;
